--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nuclia/core": "^1.27.0",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   },
