--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@progress/kendo-react-buttons": "^12.0.1",
+    "@progress/kendo-react-common": "^12.0.1",
+    "@progress/kendo-react-conversational-ui": "^12.0.1",
     "@progress/kendo-react-dateinputs": "^12.0.1",
     "@progress/kendo-react-dialogs": "^12.0.1",
     "@progress/kendo-react-dropdowns": "^12.0.1",
     "@progress/kendo-react-grid": "^12.0.1",
+    "@progress/kendo-react-layout": "^12.0.1",
     "@progress/kendo-theme-bootstrap": "^12.0.1",
     "@progress/kendo-theme-default": "^12.0.1",
+    "@progress/kendo-theme-utils": "^12.0.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
