--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,11 @@
     "@progress/kendo-theme-bootstrap": "^12.0.1",
     "@progress/kendo-theme-default": "^12.0.1",
     "@progress/kendo-theme-utils": "^12.0.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "react-syntax-highlighter": "^15.6.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
