--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@progress/kendo-licensing": "^1.7.1",
     "@progress/kendo-react-buttons": "^12.0.1",
     "@progress/kendo-react-common": "^12.0.1",
     "@progress/kendo-react-conversational-ui": "^12.0.1",
