--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@progress/kendo-licensing": "^1.7.1",
     "@progress/kendo-react-buttons": "^12.0.1",
+    "@progress/kendo-react-charts": "^12.0.1",
     "@progress/kendo-react-common": "^12.0.1",
     "@progress/kendo-react-conversational-ui": "^12.0.1",
     "@progress/kendo-react-dateinputs": "^12.0.1",
