Add financial KB data to publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,6 +62,14 @@ jobs:
                 "value": "${{ secrets.NUCLIA_API_KEY }}"
               },
               {
+                "name": "NUCLIA_FIN_KB",
+                "value": "${{ secrets.NUCLIA_FIN_KB }}"
+              },
+              {
+                "name": "NUCLIA_FIN_API_KEY", 
+                "value": "${{ secrets.NUCLIA_FIN_API_KEY }}"
+              },
+              {
                 "name": "NODE_ENV",
                 "value": "production"
               }
