--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,8 @@
     "@progress/kendo-react-common": "^13.0.0",
     "@progress/kendo-react-conversational-ui": "^13.0.0",
     "@progress/kendo-react-layout": "^13.0.0",
-    "@progress/kendo-theme-bootstrap": "^12.2.3",
-    "@progress/kendo-theme-utils": "^12.2.3",
+    "@progress/kendo-theme-bootstrap": "^12.3.0-dev.1",
+    "@progress/kendo-theme-utils": "^12.3.0-dev.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
