chore: expand and polish demos
* chore: update project license

* chore: bump kendo-react to latest

* chore: add temp bot and user avatars

* chore: fix avatars

* chore: bump kendo-theme version

* chore: add mock ai search page

* chore: add new api endpoint and boilerplate demo

* chore: add boilerplate for value proposition demo

* chore: update gitignore

* chore: refactor appbar component

* chore: refactor home page

* chore: refactor intelligent search page

* chore: extract search input and pill into separate components

* chore: add missing import

* chore: refactor drawer component

* chore: make Drawer 100% high

* chore: fix some icon definitions

* chore: refactor drawer styles

* chore: add drawer gradient

* chore: refactor knowledge assistant demo

* chore: update Value demo

* chore: refactor chat messages

* chore: update Finance analysis demo

* chore: tweak knowledge assistant demo

* chore: continue refactor knowledge assitant demo

* chore: tweak appbar navigation items

* chore: polish Finance analysis demo

* chore: streamline vertical overflow

* chore: Value demo polishing

* chore: add chat header template

* chore: chat should not have header template

* tweak chat demos

* chore: update FinanceAnanlysis layout

* chore: financial demo fixes

* chore: reoder demos and change demo icons

* chore: add vectorBackground component and use it across the demos

* chore: update vectorBackground component

* chore: add states for the search input and its pills

* chore: tweak appbar component

* chore: vector background image should scroll with the page scroll

* chore: update input styles

* chore: strip initial bot message in knowledge assistant demo when conversation is started

* chore: handle chat message width mode

* chore: add gradient background to the hero sections

* chore: add Metric font

* chore: make chat messages full width

* chore: responsive home page

* chore: update financial analysis demo

* chore: consolidate styles

* cho

--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@progress/kendo-licensing": "^1.7.1",
-    "@progress/kendo-react-buttons": "^12.0.2",
-    "@progress/kendo-react-charts": "^12.0.2",
-    "@progress/kendo-react-common": "^12.0.2",
-    "@progress/kendo-react-conversational-ui": "^12.0.2",
-    "@progress/kendo-react-layout": "^12.0.2",
-    "@progress/kendo-theme-bootstrap": "^12.0.1",
-    "@progress/kendo-theme-utils": "^12.0.1",
+    "@progress/kendo-react-buttons": "^13.0.0",
+    "@progress/kendo-react-charts": "^13.0.0",
+    "@progress/kendo-react-common": "^13.0.0",
+    "@progress/kendo-react-conversational-ui": "^13.0.0",
+    "@progress/kendo-react-layout": "^13.0.0",
+    "@progress/kendo-theme-bootstrap": "^12.3.0-dev.1",
+    "@progress/kendo-theme-utils": "^12.3.0-dev.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
